force-app/main/default/objects/vf_Volunteer__c/vf_Volunteer__c.object-meta.xml
<CustomObject>
    <label>Volunteer</label>
    <pluralLabel>Volunteers</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Volunteer Name</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Object to store volunteer information and attributes</description>
</CustomObject>