force-app/main/default/objects/vf_Volunteer__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <label>Availability</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>JSON structure of volunteer availability schedule</description>
    <inlineHelpText>Volunteer's availability schedule. Stored in JSON format.</inlineHelpText>
</CustomField>