force-app/main/default/objects/vf_Volunteer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
    <description>Volunteer's email address</description>
    <inlineHelpText>Email address of the volunteer</inlineHelpText>
</CustomField>