force-app/main/default/objects/vf_Volunteer__c/fields/Interests__c.field-meta.xml
<CustomField>
    <fullName>Interests__c</fullName>
    <label>Interests</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>JSON array of volunteer interests</description>
    <inlineHelpText>List of interests of the volunteer. Stored in JSON format.</inlineHelpText>
</CustomField>