force-app/main/default/objects/vf_Volunteer__c/fields/Learning_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Learning_Preferences__c</fullName>
    <label>Learning Preferences</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>JSON structure of volunteer learning preferences</description>
    <inlineHelpText>Volunteer's preferred learning styles and methods. Stored in JSON format.</inlineHelpText>
</CustomField>