force-app/main/default/objects/vf_Volunteer__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
    <description>Longitude coordinate of volunteer's location</description>
    <inlineHelpText>Longitude coordinate of volunteer's location for geographical matching</inlineHelpText>
</CustomField>