force-app/main/default/objects/vf_Volunteer__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
    <description>Volunteer's phone number</description>
    <inlineHelpText>Phone number of the volunteer</inlineHelpText>
</CustomField>