force-app/main/default/objects/vf_Volunteer__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
    <description>Volunteer's postal/zip code</description>
    <inlineHelpText>Postal/zip code of the volunteer's location</inlineHelpText>
</CustomField>