force-app/main/default/objects/vf_Volunteer__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>JSON array of volunteer skills</description>
    <inlineHelpText>List of skills possessed by the volunteer. Stored in JSON format.</inlineHelpText>
</CustomField>