force-app/main/default/objects/vf_Volunteer__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
    <description>Date the volunteer started with the organization</description>
    <inlineHelpText>Date when the volunteer started with the organization</inlineHelpText>
</CustomField>